recursion.cons.lessons.recursion.cons.Last.scala.code
def last(l:List[Int]): Int = {
	if(l.tail == Nil){
		return l.head
	}else last(l.tail, v)
}